--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kungfu-trader/action-generate-release-page",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "main": "dist/index.js",
   "repository": "https://github.com/kungfu-trader/action-generate-release-page",
   "author": "Keren Dong",
