--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.0",
     "glob": "^10.3.0",
+    "mustache": "^4.2.0",
     "semver": "^7.5.4",
     "yargs": "^17.7.2"
   },
