--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@typescript-eslint/parser": "^6.7.2",
     "@vercel/ncc": "^0.38.0",
     "eslint": "^8.49.0",
-    "prettier": "^3.0.0",
+    "prettier": "~2.7.0",
     "prettier-eslint-cli": "^7.1.0",
     "rimraf": "^5.0.4"
   }
