--- a/.github/workflows/sync-release-page.yml
+++ b/.github/workflows/sync-release-page.yml
@@ -10,6 +10,12 @@ on:
         description: 'Type product name to generate release page'
         required: true
         default: 'static/action-generate-release-page'
+      lower-edge:
+        description: 'filter version >= lower-edge value'
+        required: false
+      upper-edge:
+        description: 'filter version <= upper-edge value'
+        required: false
 
 jobs:
   sync-release-page:
@@ -17,3 +23,5 @@ jobs:
     with:
       product: ${{ github.event.inputs.product }}
       release-path: ${{ github.event.inputs.release-path }}
+      lower-edge: ${{ github.event.inputs.lower-edge }}
+      upper-edge: ${{ github.event.inputs.upper-edge }}
