--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.0",
+    "@octokit/rest": "^20.0.2",
+    "@yarnpkg/lockfile": "^1.1.0",
     "axios": "^1.6.2",
     "glob": "^10.3.0",
     "lodash.chunk": "^4.2.0",
+    "lodash.groupby": "^4.6.0",
     "lodash.sortby": "^4.7.0",
     "mustache": "^4.2.0",
     "semver": "^7.5.4",
