--- a/.github/workflows/sync-release-page.yml
+++ b/.github/workflows/sync-release-page.yml
@@ -27,6 +27,10 @@ on:
         description: 'Manually exclude the version, comma separation'
         default: '2.4.0, 2.2.0, 2.1.0, 2.4.0-alpha.0, 2.3.0-alpha.0, 2.2.0-alpha.0, 2.1.0-alpha.0'
         required: false
+      base-id:
+        type: string
+        required: true
+        default: "appAdi5zFFEsCzmEM"
       release-url:
         description: 'Release page base url'
         default: 'https://releases.kungfu-trader.com'
@@ -44,4 +48,5 @@ jobs:
       exclude: ${{ github.event.inputs.exclude }}
       release-url: ${{ github.event.inputs.release-url }}
       bucket-release: ${{ github.event.inputs.bucket-release }}
+      base-id: ${{ github.event.inputs.base-id }}
       
