--- a/.github/workflows/sync-release-page.yml
+++ b/.github/workflows/sync-release-page.yml
@@ -49,4 +49,7 @@ jobs:
       release-url: ${{ github.event.inputs.release-url }}
       bucket-release: ${{ github.event.inputs.bucket-release }}
       base-id: ${{ github.event.inputs.base-id }}
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.KUNGFU_GITHUB_TOKEN }}
+      AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
       
