--- a/.github/workflows/sync-release-page.yml
+++ b/.github/workflows/sync-release-page.yml
@@ -10,9 +10,12 @@ on:
         description: 'Release Path for URL'
         required: true
         default: 'static'
-      description:
-        description: "Description for Kungfu Product, HTML enable"
-        default: "Kungfu Trader is a trading platform for quantitative trading."
+      product-name: 
+        type: string
+        required: false
+      repo: 
+        type: string
+        required: false
       bucket-release:
         description: 'S3 bucket for releases page'
         default: 'kungfu-releases'
@@ -41,7 +44,8 @@ jobs:
     uses: kungfu-trader/workflows/.github/workflows/.sync-release-page.yml@dev/v1/v1.2
     with:
       product: ${{ github.event.inputs.product }}
-      description: ${{ github.event.inputs.description }}
+      product-name: ${{ github.event.inputs.product-name }}
+      repo: ${{ github.event.inputs.repo }}
       release-path: ${{ github.event.inputs.release-path }}
       lower-edge: ${{ github.event.inputs.lower-edge }}
       upper-edge: ${{ github.event.inputs.upper-edge }}
@@ -49,6 +53,7 @@ jobs:
       release-url: ${{ github.event.inputs.release-url }}
       bucket-release: ${{ github.event.inputs.bucket-release }}
       base-id: ${{ github.event.inputs.base-id }}
+
     secrets:
       AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
       
