--- a/templates/artifact-kungfu/config.json
+++ b/templates/artifact-kungfu/config.json
@@ -20,6 +20,11 @@
             "class": "active"
         },
         {
+            "title": "解决方案",
+            "url": "https://www.kungfu-trader.com/index.php/solution/",
+            "target": "_blank"
+        },
+        {
             "title": "功夫量化",
             "url": "https://www.kungfu-trader.com/",
             "target": "_blank"
