[fix] kungfu-trader template

--- a/templates/kungfu-trader/config.json
+++ b/templates/kungfu-trader/config.json
@@ -1,7 +1,7 @@
 {
     "homePage": "https://www.kungfu-trader.com",
     "logo": {
-        "url": "https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/01/cropped-cropped-log-18-300x82_副本.png",
+        "url": "https://s3.cn-northwest-1.amazonaws.com.cn/users.kungfu-trader.com/uploads/2024/03/cropped-cropped-WechatIMG121-300x76.png",
         "height": 82,
         "offset": -2,
         "wrap": 79,
